Added new var spec types.